<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Westernfood">

    <TextView
        android:id="@+id/Westernheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginLeft="78dp"
        android:text="@string/Western"/>

    <ImageView
        android:id="@+id/chickenid"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Westernheader"
        android:src="@drawable/chicken_chop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chickenid"
        android:text="@string/typeofwesternfood"
        android:textSize="20sp"
        android:layout_marginLeft="28dp"
        android:id="@+id/titlechicken"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_below="@+id/titlechicken"
        android:layout_marginTop="38dp"
        android:textSize="20sp"
        android:id="@+id/quantityid"/>

    <EditText
        android:layout_width="300dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="28dp"
        android:layout_height="wrap_content"
        android:hint="@string/quantityamount"
        android:layout_below="@+id/titlechicken"
        android:id="@+id/quantityedit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quantityid"
        android:text="@string/pricename"
        android:textSize="20sp"
        android:id="@+id/prices"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quantityid"
        android:layout_marginLeft="100dp"
        android:text="@string/price"
        android:textSize="20sp"
        android:id="@+id/pricing"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addcart"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/addtocart"/>





</RelativeLayout>