<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textinfo"
        android:text="Welcome!"
        android:textSize="34dp"
        android:layout_marginLeft="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textinfo"
        android:layout_marginTop="37dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/text_username"
        android:layout_width="@dimen/editwidth"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:hint="@string/usertextbox"
        android:layout_below="@id/textinfo"/>

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user"
        android:layout_marginTop="41dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="@dimen/editwidth"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:hint="@string/passtextbox"
        android:layout_below="@id/text_username"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginbtn"
        android:id="@+id/LogInBtn"
        android:layout_below="@+id/text_password" />

</RelativeLayout>