<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutus">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/spfoodcourt"
        android:id="@+id/imageofaboutus"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutus"
        android:textSize="40dp"
        android:layout_below="@+id/imageofaboutus"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:id="@+id/aboutustitle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doneby"
        android:textSize="30dp"
        android:layout_below="@+id/aboutustitle"
        android:layout_marginTop="30dp"
        android:id="@+id/doneby"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Kenneth"
        android:layout_below="@+id/aboutustitle"
        android:textSize="30dp"
        android:layout_toRightOf="@+id/doneby"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"/>

</RelativeLayout>